examples/test/testpolicy11325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11325
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key40: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value39
          key37: value9
      podSelector:
        matchLabels:
          key48: value29
          key5: value35
